--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,10 @@ code {
   padding: 1rem 1rem;
   text-transform: uppercase;
 }
+
+carImage{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
